--- a/index.html
+++ b/index.html
@@ -42,42 +42,48 @@
 			  <div class="container">
 			    <!-- Brand and toggle get grouped for better mobile display -->
 			    <div class="navbar-header navegacion-2">
-			    	<div class="button button-dos">
-								<button type="button" class=" button-2 btn btn-danger">Crea tu perfil</button>
-							</div>
 			      <button type="button" class="navbar-2 navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
 			        <span class="sr-only">Toggle navigation</span>
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			        <span class="icon-bar"></span>
 			      </button>
+			      <div class="button button-dos">
+						<button type="button" class=" button-2 btn btn-danger">Crea tu perfil</button>
+					</div>
 			    </div>
 			    <!-- Collect the nav links, forms, and other content for toggling -->
-			    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-			    	<ul class=" nav navbar-nav">
-			    		<li><a href="#">Sobre nosotros </a></li>| 
-			      		<li><a href="#">Oportunidades</a></li>
-			      	</ul>
-			    </div><!-- /.navbar-collapse -->
+			    
 			  </div><!-- /.container-fluid -->
 			</nav>	
+				<div class="collapse " id="bs-example-navbar-collapse-2">
+			    	<ul class=" ">
+			    		<li><a href="#">Home</a></li>
+			      		<li><a href="#">Sobre nosotros</a></li>
+			      		<li><a href="#">Ingresa a tú cuenta</a></li>
+			      		<li><a href="#">Crear cuenta</a></li>
+			      		<li><a href="#">Blog</a></li>
+			      		<li><a href="#">Contáctanos</a></li>
+			      	</ul>
+			    </div><!-- /.navbar-collapse -->
 		</header>
 		<section class="portada hidden-xs">
 			<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-6"></div>
-					 	<div class="col-sm-6">
-					 		<div class="logo">
-								<img src="img/iconos/iconos-20.png">
-							</div>
-							<p class="p-largo">Identificamos al mejor talento y maximizamos su potencial</p>
-							<p class="p-medium">Con una evalucacion rigurosa, tanto de postulantes como de puestos laborales,identificamos la sinergia óptima entre trabajador y empresa aumentando la productividad , la permanencia y la felicidad de los trabajadores</p>
-							<div class="button">
-								<button type="button" class=" red btn btn-danger">Crea tu perfil</button>
-							</div>
-					 	</div>
-					 </div>
-					 <center><img  class="btn-circular"src="img/iconos/iconos-15.png"></center>
+
+				<div class="row">
+					<div class="col-sm-6"></div>
+				 	<div class="col-sm-6">
+				 		<div class="logo">
+							<img src="img/iconos/iconos-20.png">
+						</div>
+						<p class="p-largo">Identificamos al mejor talento y maximizamos su potencial</p>
+						<p class="p-medium">Con una evalucacion rigurosa, tanto de postulantes como de puestos laborales,identificamos la sinergia óptima entre trabajador y empresa aumentando la productividad , la permanencia y la felicidad de los trabajadores</p>
+						<div class="button">
+							<button type="button" class=" red btn btn-danger">Crea tu perfil</button>
+						</div>
+				 	</div>
+				 </div>
+				 <center><img  class="btn-circular"src="img/iconos/iconos-15.png"></center>
 			</div>
 		</section>
 		<section class="portada2 hidden-md hidden-lg">
@@ -90,7 +96,7 @@
 				<img  class="imagen-responsive"src="img/foto-landing-09.png">
 			</div>
 		</section>
-		<section class="metodologia">
+		<section class="metodologia hidden-xs">
 			<div class="row">
 				<div class="col-md-12">
 					<b><p>Nuestra metodología</p></b>
@@ -156,12 +162,43 @@
 				</div>
 			</div>
 		</section>
-		<section class="postulantes">
-       <div class="container center">
-         <div class="farolito">
-            <h1>Farolito para postulantes</h1>
-            <h3>Alcanza tu potencial profesional con Farolito</h3>
-         </div>
+		<section class="metodologia-2 hidden-md hidden-lg">
+			<div class="row">
+				<div class="col-md-12">
+					<b><p>Nuestra metodología</p></b>
+				</div>
+			</div>
+			<div class="tex-2-responsive">
+				<h4>
+				Evaluación de competencias
+				</h4>
+				<p>Selección de talento que cuenta con las competencias claves para el puesto</p>
+				<hr>
+			</div>
+			<div class="tex-2-responsive">
+				<h4>
+					Análisis continuo
+				</h4>
+				<p>
+					Actualización continua del perfil óptimo para cada puesto, que permita incorporar cambios a la economía laboral u operaciones internas que impacten el día al día.
+				</p>
+				<hr>
+			</div>
+			<div class="tex-2-responsive">
+				<h4>
+					Evaluación de preferencias
+				</h4>
+				<p>
+					Selección de talento que permanecerá más tiempo por tener preferencias de trabajo alineadas con el puesto.
+				</p>
+			</div>
+		</section>
+		<section class="postulantes hidden-xs">
+       		<div class="container center">
+	         <div class="farolito">
+	            <h1>Farolito para postulantes</h1>
+	            <h3>Alcanza tu potencial profesional con Farolito</h3>
+	         </div>
          <div class="row">
            <div class="col-md-2">
              <ul class="numeros">
@@ -196,14 +233,38 @@
             </div>
           </div>
        </div>
-       <div class="ver-oportunidades">
-						<center><button type="button" class="btn btn-info">Ver oportunidades</button></center>
+	   <div class="ver-oportunidades">
+				<center><button type="button" class="btn btn-info">Ver oportunidades</button></center>
 				</div>
 				<div class="row">
 				<div class="col-md-12">
 					<center><img  class="btn-circulo-2"src="img/iconos/iconos-15.png"></center>
+		</div>
+		</div>
+    </section>
+    <section class="postulantes-2 hidden-md hidden-lg">
+    	<div class="row">
+    		<div class="col-md-12">
+    			<h1>Farolito para postulantes</h1>
+				<div class="numeros-responsive">
+					<li><img src="img/iconos/numero-1.png"></li>
+					<li><img src="img/iconos/iconos-09.png"></li>
+					<h3>Crea tu perfil</h3>
+					<li><hr></li>
+					<h3>Ingresa tus datos en nuestra página y forma parte de nuestra comunidad.</h3>
+					<li><img src="img/iconos/numero-2.png"></li>
+					<li><img src="img/iconos/iconos-10.png"></li>
+					<h3>Postula a oportunidades laborales</h3>
+					<li><hr></li>
+					<h3>Conoce en minutos si cumples con los requisitos para el puesto. Te enviamos correos con las oportunidades.</h3>
+					<li><img src="img/iconos/numero-3.png"></li>
+					<li><img src="img/iconos/iconos-11.png"></li>
+					<h3>Mejora tu perfil profesional</h3>
+					<hr>
+					<h3>Participa en uno de nuestros cursos de Career Coaching y aprende maneras de superar desafíos y salir adelante en el ambiente laboral.</h3>
 				</div>
-			</div>
+    		</div>
+    	</div>
     </section>
     <section class="farolito-para-empresas">
     	<div class="container">
@@ -231,13 +292,13 @@
    			</div>
    		</div>
    		<div>
-					<button type="button" class="boton-contactanos btn btn-danger">Contáctanos</button>
+			<button type="button" class="boton-contactanos btn btn-danger">Contáctanos</button>
+		</div>
+		<div class="row hidden-xs">
+			<div class="col-md-12">
+				<img  class="btn-circulo-3"src="img/iconos/iconos-15.png">
 			</div>
-			<div class="row">
-				<div class="col-md-12 container">
-					<img  class="btn-circulo-3"src="img/iconos/iconos-15.png">
-				</div>
-			</div>
+		</div>
     	</div>
     </section>
     <section class="farolito-para-educacion">
@@ -265,16 +326,16 @@
    			</div>
    		</div>
    		<div>
-					<button type="button" class="boton-contactanos-educacion btn btn-danger">Contáctanos</button>
-			</div>
-			<div class="row">
+			<button type="button" class="boton-contactanos-educacion btn btn-danger">Contáctanos</button>
+		</div>
+			<div class="row hidden-xs">
 				<div class="col-md-12 container">
 					<img  class="btn-circulo-3"src="img/iconos/iconos-15.png">
 				</div>
 			</div>
     	</div>
     </section>
-    <section class="lista-oportunidades">
+    <section class="lista-oportunidades hidden-xs">
     	<div class="container">
     		<h3>Lista de oportunidades</h3>
     		<div class="row">
@@ -312,21 +373,21 @@
     				<h5>Horario: 8:00 am - 6:00 pm</h5>
     				<div class="boton-ver-izquierda">
 							<button type="button" class="boton-ver-mas btn btn-danger">Ver más</button>
-						</div>
-						<hr>
+					</div>
+					<hr>
     			</div>
     		</div>
     	</div>
     	<div class="btn-ver-todos">
     		<button type="button" class="btn-ver btn btn-danger">Ver todos</button>
     	</div>
-    	<div class="row">
-				<div class="col-md-12 container ultimo">
-					<img  class="btn-circulo-4"src="img/iconos/iconos-15.png">
-				</div>
+    	<div class="row hidden-xs">
+			<div class="col-md-12 container ultimo">
+				<img  class="btn-circulo-4"src="img/iconos/iconos-15.png">
 			</div>
+		</div>
     </section>
-    <section class="blog-farolito">
+    <section class="blog-farolito xs">
     	<div class="container">
     		<h3>Blog Favorito</h3>
     		<div class="row row-2">
@@ -334,7 +395,7 @@
     			<div class="img-farolito">
     				<img src="img/iconos/iconos-22.png">
     			</div>
-    			<a href="">
+    			<a href="blog-farolito.html">
     				<div class="lorem">
     				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
     			</div>
@@ -344,7 +405,7 @@
     			<div class="img-farolito">
     				<img src="img/iconos/iconos-23.png">
     			</div>
-    			<a href="">
+    			<a href="blog-farolito.html">
     				<div class="lorem">
     				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
     			</div>
@@ -354,7 +415,7 @@
     			<div class="img-farolito">
     				<img src="img/iconos/iconos-23.png">
     			</div>
-    			<a href="">
+    			<a href="blog-farolito.html">
     				<div class="lorem">
     				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
     			</div>
@@ -362,14 +423,17 @@
     		</div>
     	</div>
     	</div>
+    	<section class="blog-responsive hidden-md hidden-lg">
+
+    	</section>
     	<div class="ver-oportunidades">
-						<center><button type="button" class=" ver-todos btn btn-info">Ver Todos</button></center>
-				</div>
-    	<div class="row">
-				<div class="col-md-12">
-					<center><img  class="btn-circulo-4 "src="img/iconos/iconos-15.png"></center>
-				</div>
+			<center><button type="button" class=" ver-todos btn btn-info">Ver Todos</button></center>
+		</div>
+    	<div class="row hidden-xs">
+			<div class="col-md-12">
+				<center><img  class="btn-circulo-4 "src="img/iconos/iconos-15.png"></center>
 			</div>
+		</div>
     </section>
     <section class="consulta">
     	<div id="contactanos" class="contacto">
@@ -396,17 +460,12 @@
      	<div>
      		<img src="img/iconos/iconos-14.png">
      	</div> 
-     	<h5>Todos los derechos reservados</h5>
-     	<hr>
-     	<p>"Todos somos genios</p>
-     	<p>pero hay que descubir nuestra capacidad".</p>
-     	<hr>
-     	<p>Con una evaluación personalizada del postulante, análisis comrpensico big Data del puesto y el cliente se puede asegurar la sinergia óptima entre el trabajadpr y empresa, para así lograr más productividad y permanencia.</p>
     </div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<!-- Javascripts de Bootstrap -->
 	<!--<script src="javascript/b3/collapse.js"></script>
 	<script src="javascript/b3/transition.js"></script>-->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+  <script src="miscript.js"></script>
 	</body>	
 </html>	
